--- a/Configuration/GDAXFeedHandler.cfg
+++ b/Configuration/GDAXFeedHandler.cfg
@@ -1,3 +1,7 @@
 [FeedHandler]
 Connection : wss://ws-feed.pro.coinbase.com
 TickerFile : c:\temp\tickers.txt
+
+[Logging]
+Filename = GDAXFeedHandler.log
+LogLevel = INFO
