Added logging to DbWriter
Now logging all messages to
DbWriter

--- a/Configuration/DbWriter.cfg
+++ b/Configuration/DbWriter.cfg
@@ -3,3 +3,7 @@ Host: localhost
 User:  gdaxuser
 Passwd: AnimalHouse1010
 Db: StockMarketGame
+
+[Logging]
+Filename = DbWriter.log
+LogLevel = INFO
