Added more logging
Added logging to both SMGExchange and SMGOrderSimulator.  Now all four processes are logging.

--- a/Configuration/SMGOrderSimulator.cfg
+++ b/Configuration/SMGOrderSimulator.cfg
@@ -10,3 +10,7 @@ OrderSeq = 1
 FillSeq = 1
 SystemName = Simulator
 DefaultSide = Sell
+
+[Logging]
+Filename = SMGOrderSimulator.log
+LogLevel = INFO
