Added all tickers
I added all ticers.  Also I moved the tickers.txt to a new directory called data. I noticed that for prices I was not going out enough decimal places.

--- a/Configuration/GDAXFeedHandler.cfg
+++ b/Configuration/GDAXFeedHandler.cfg
@@ -1,6 +1,6 @@
 [FeedHandler]
 Connection : wss://ws-feed.pro.coinbase.com
-TickerFile : c:\temp\tickers.txt
+TickerFile : tickers.txt
 
 [Logging]
 Filename = GDAXFeedHandler.log
