Updated config fixed issue with userId
UserId should be what is passed in so you know who owns order.

--- a/Configuration/SMGTestConsole.cfg
+++ b/Configuration/SMGTestConsole.cfg
@@ -5,9 +5,9 @@ Passwd: AnimalHouse1010
 Db: StockMarketGame
 
 [OrderManager]
-OMSuffix = CON
-OrderSeq = 1
-FillSeq = 1
+OMSuffix = CONS
+OrderSeq = 2
+FillSeq = 2
 SystemName = TestConsole
 
 [Logging]
