Changed directory to first letter upercase
I changed logging to Logging
Also made the database in config file lower case.

--- a/Configuration/DbWriter.cfg
+++ b/Configuration/DbWriter.cfg
@@ -2,7 +2,7 @@
 Host: localhost
 User:  gdaxuser
 Passwd: AnimalHouse1010
-Db: StockMarketGame
+Db: stockmarketgame 
 
 [Logging]
 Filename = DbWriter.log
